# dices

./: CMakeLists.txt  README.md  main.cpp  scoreboards.hpp  window.cpp  window.h
