CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(main)

set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Core)
SET(CMAKE_AUTOMOC ON)

if(COMPILER_MSVC)
    add_definitions(-DUNICODE -D_UNICODE)
endif()

FILE(GLOB SOURCES 
    *.h 
    *.cpp)
		
ADD_EXECUTABLE(main ${SOURCES})
TARGET_LINK_LIBRARIES(main Qt5::Widgets)
TARGET_LINK_LIBRARIES(main Qt5::Core)

INCLUDE_DIRECTORIES(".")
INCLUDE_DIRECTORIES(${Qt5Core_INCLUDES})
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDES})